# csvcubed

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  WIP config guide measures-unit.md  behave_debug.py  behavetest.py  cube-and-code-lists-quads.trig  data.csv  data.json  dcatDistribution.json  dcatDistribution.ttl  example.ttl  gen-docs.sh  myscript.py  new_command.py  out.ttl  pipenv-cascade.sh  poetry-cascade.sh  pyproject.toml  region.json  some-output.ttl  sonar-project.properties  stf.json  stuff.trig  test_request_hooks.py  tox.ini  windows-testing-setup.ps1
csvcubed/: README.md  definitions.py  pyproject.toml  std_out.out  tox.ini  validation_errors.json
csvcubed-devtools/: pyproject.toml  tox.ini
csvcubed-devtools/csvcubeddevtools/: README.md  __init__.py
csvcubed-devtools/csvcubeddevtools/behave/: csv2rdf.py  csvlint.py  file.py  sparqltests.py
csvcubed-devtools/csvcubeddevtools/behaviour/: csv2rdf.py  csvlint.py  environment.py  file.py  rdf.py  sparqltests.py
csvcubed-devtools/csvcubeddevtools/helpers/: __init__.py  csvwhelpers.py  file.py  rdflibhelpers.py  tar.py
csvcubed-models/: pyproject.toml  tox.ini
csvcubed-models/csvcubedmodels/: README.md  dataclassbase.py
csvcubed-models/csvcubedmodels/rdf/: datatypes.py  dcat.py  namespaces.py  qb.py  rdf.py  rdfs.py  resource.py  skos.py
csvcubed-models/csvcubedmodels/utils/: uri.py
csvcubed-models/tests/unit/: test_dataclassbase.py
csvcubed-pmd/: Dockerfile  docker-compose.yml  pyproject.toml  tox.ini
csvcubed-pmd/csvcubedpmd/: README.md  __init__.py  main.py  main2.py
csvcubed-pmd/csvcubedpmd/codelist/: __init__.py  datetimecodelistgen.py
csvcubed-pmd/csvcubedpmd/codelistcli/: datetimecodelistgen.py
csvcubed-pmd/csvcubedpmd/config/: pmdconfig.py
csvcubed-pmd/csvcubedpmd/csvw/: __init__.py
csvcubed-pmd/csvcubedpmd/csvwcli/: URI_replacement.py  URI_replacement__init__.py  URI_replecment.py  __init__.py  findwhere.py  pull.py
csvcubed-pmd/csvcubedpmd/dcatcli/: __init__.py  pmdify.py
csvcubed-pmd/csvcubedpmd/models/: CsvCubedOutputType.py
csvcubed-pmd/csvcubedpmd/urireplacement/: __init__.py  urireplacement.py
csvcubed-pmd/csvcubedpmd/utils/: rdflibutils.py  sparql.py
csvcubed-pmd/tests/: TurleOutputFile.ttl  TurleTestFile.ttl  debug_behave.py
csvcubed-pmd/tests/behaviour/: csvwcommandline.feature  dcatcommandline.feature  environment.py  uri.feature
csvcubed-pmd/tests/test-cases/: CP1252.txt  CP437.txt  LICENSE  README.txt  TurtleOutputFile.ttl  UTF-8.txt  absolute.csv-metadata.json  bom-utf-16-be.srt  hmrc-overseas-trade-statistics-cn8.csv
csvcubed-pmd/tests/unit/: test_datetimecodelistgentests.py
csvcubed/csvcubed/: README.md  __init__.py  definitions.py  inputs.py
csvcubed/csvcubed/cli/: __init__.py  build.py  entrypoint.py  error_mapping.py  inspect.py
csvcubed/csvcubed/constraints/: README.md  columns.py  ics.py  sparql.py  utils.py  virtualiser.py
csvcubed/csvcubed/csvcubedcli/: utils.py
csvcubed/csvcubed/models/: csvcubedexception.py  errorurl.py  inspectdataframeresults.py  inspectsparqlresults.py  pydanticmodel.py  uriidentifiable.py  validationerror.py
csvcubed/csvcubed/readers/: columnschema.py  configdeserialiser.py  mapcolumntocomponent.py  preconfiguredtemplates.py  skoscodelistreader.py  vnum.py
csvcubed/csvcubed/schema/: cube-config-schema.json  cube-config-schema.jsonc  cube-config.example.jsonc  cube-config.schema.jsonc  qbconfig-example.jsonc
csvcubed/csvcubed/utils/: __init__.py  cache.py  csvdataset.py  csvw.py  dataset.py  dict.py  file.py  iterables.py  json.py  log.py  pandas.py  pandas_na_filter.py  printable.py  sparql.py  uri.py
csvcubed/csvcubed/writers/: qbwriter.py  skoscodelistwriter.py  writerbase.py
csvcubed/shacl/: README.md
csvcubed/tests/behaviour/: CatalogMetadata.feature  ConfigSchema.feature  cli.feature  cube.feature  environment.py  infojson.feature  infojson2csvw.feature  inspectcli.feature  logging.feature  qbwriter.feature  skoscodelists.feature
csvcubed/tests/unit/: conftest.py  test_baseunit.py
csvqb/: Pipfile  pyproject.toml  setup.py
csvqb/csvqb/: README.md  inputs.py
csvqb/csvqb/cli/: build.py  entrypoint.py
csvqb/csvqb/configloaders/: infojson.py
csvqb/csvqb/models/: pydanticmodel.py  rdf.py  uriidentifiable.py  validationerror.py
csvqb/csvqb/readers/: __init__.py  skoscodelistreader.py
csvqb/csvqb/utils/: csvw.py  dict.py  iterables.py  jsonschemavalidation.py  uri.py
csvqb/csvqb/writers/: qb.py  qbwriter.py  skoscodelistwriter.py  writerbase.py
csvqb/docs/: conf.py
csvqb/src/models/: uriidentifiable.py
csvqb/src/writers/: writerbase.py
csvqb/tests/unit/: test_baseunit.py
devtools/: Pipfile  pyproject.toml  setup.py
devtools/devtools/: __init__.py
devtools/devtools/behave/: csv2rdf.py  csvlint.py  file.py  rdf.py  sparqltests.py  temporarydirectory.py
devtools/devtools/helpers/: csvwhelpers.py  tar.py
devtools/docs/: conf.py
external-docs/: Dockerfile  Jenkinsfile  config.rb  middleman-serve.sh  mkdocs.yml  pyproject.toml  spell-check.sh
external-docs/config/: tech-docs.yml
external-docs/docs/: about.md  dict_manual_definitions.txt  index.md  page1.md  page2.md
external-docs/docs/api-documentation/: index.md
external-docs/docs/glossary/: index.md
external-docs/docs/guides/: csv-to-csvw-github-action.md  example3.md  file-bug.md  index.md  installing-python.md  missing-observed-values.md  pivoted-shape.md  qube-config.md  raise-issue.md  shape-conversion.md  shape-data.md  standard-shape.md  uris.md  using-templates.md
external-docs/docs/quick-start/: build-command.md  build.md  (+11 more)
external-docs/mkdocs-project/: mkdocs.yml
external-docs/mkdocs-static-site/: mkdocs.yml
external-docs/my-project/: .template_version
external-docs/source/: index.html.md.erb
pmd/: Dockerfile  Pipfile  pyproject.toml  setup.py
pmd/docs/: conf.py
pmd/pmd/: datetimecodelistgen.py  main.py
sharedmodels/: Pipfile  pyproject.toml  setup.py
sharedmodels/docs/: conf.py
sharedmodels/sharedmodels/: README.md  __init__.py  dataclassbase.py
(+1595 files in other folders)
