[tool.poetry]
authors = ["Integrated Data Service - Dissemination <csvcubed@gsscogs.uk>"]
description = "A tool to generate RDF Data Cube style CSV-W cubes from tidy CSV files. Part of the csvcubed family."
exclude = [
  "docs/*",
  "tests/*"
]
license = "Apache-2.0"
name = "csvcubed"
packages = [
  {include = "csvcubed", from = "src"},
  # Adding tests package so we can import in unit/behaviour/stress/profiling tests, but the exlucde above makes sure the
  # package doesn't actually include any of theses files.
  {include = "tests"}
]
readme = "README.md"
version = "0.2.1"

[tool.poetry.dependencies]
pandas = "^1.3.3"
python = ">=3.9,<3.12"
jsonschema = "^4.4.0"
appdirs = "^1.4.4"
requests = "^2.27.1"
click = ">=8.0.0"
requests-cache = "^0.9.3"
treelib = "^1.6.1"
uritemplate = "^4.1.1"
python-dateutil = "^2.8.2"
csvcubed-pydantic = ">=1.9.0"
csvcubed-models = "0.1.6"

[tool.poetry.dev-dependencies]
csvcubed-devtools = "0.1.8"
requests-mock = "~1.9.3"
pytest-vcr = "~1.0.2"
pytest-timeout = "^2.1.0"
mkdocs = "1.4.2"
mkdocs-material = "8.5.7"
mkdocs-mermaid2-plugin = "0.6.0"
py-spy = "^0.3.14"
memory-profiler = "^0.61.0"
matplotlib = "^3.6.2"  # Necessary for memory-profiler graphs

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
exclude = [
  ".venv",
  "**/tests",
]
pythonVersion = "3.9"

[tool.poetry.scripts]
csvcubed = 'csvcubed.cli.entrypoint:entry_point'

[tool.isort]
profile = "black"
