[tool.poetry]
authors = ["Integrated Data Service - Dissemination <csvcubed@gsscogs.uk>"]
description = "A tool to generate RDF Data Cube style CSV-W cubes from tidy CSV files. Part of the csvcubed family."
exclude = [
  "docs/*",
  "tests/*"
]
license = "Apache-2.0"
name = "csvcubed"
packages = [
  {include = "csvcubed", from = "src"},
  # Adding tests package so we can import in unit/behaviour/stress/profiling tests, but the exlucde above makes sure the
  # package doesn't actually include any of theses files.
  {include = "tests"}
]
readme = "README.md"
version = "0.1.0-dev"

[tool.poetry.dependencies]
pandas = "^1.3.3"
python = ">=3.9,<3.12"
jsonschema = "^4.4.0"
requests = "^2.27.1"
click = ">=8.0.0"
requests-cache = "^0.9.3"
treelib = "^1.6.1"
uritemplate = "^4.1.1"
# Limiting urllib3 to versions < 2.x.x because of the following issue: https://github.com/kevin1024/vcrpy/issues/688.
# This restraint can be lifted once the fix has been published by removing urllib3 as it is a dependency of other packages.
urllib3 = "^1.0.0"
python-dateutil = "^2.8.2"
csvcubed-models = "0.1.6"
platformdirs = "^3.5.0"
sparqlwrapper = "^2.0.0"

[tool.poetry.dev-dependencies]
csvcubed-devtools = ">=0.1.8"
requests-mock = "~1.9.3"
pytest-vcr = "~1.0.2"
pytest-timeout = "^2.1.0"
mkdocs = "1.4.2"
mkdocs-material = "9.1.3"
mkdocs-mermaid2-plugin = "0.6.0"
py-spy = "^0.3.14"
memory-profiler = "^0.61.0"
matplotlib = "^3.6.2"  # Necessary for memory-profiler graphs

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
exclude = [
  ".venv",
  "**/tests",
  ".git"
]
pythonVersion = "3.9"

[tool.poetry.scripts]
csvcubed = 'csvcubed.cli.entrypoint:entry_point'

[tool.isort]
profile = "black"
