[tool.poetry]
authors = ["Integrated Data Service - Dissemination <csvcubed@gsscogs.uk>"]
description = "Development tools and dependencies for use in the csvcubed tooling."
exclude = ["docs/*"]
license = "Apache-2.0"
name = "csvcubed-devtools"
packages = [
  {include = "csvcubeddevtools"},
]
readme = "csvcubeddevtools/README.md"
version = "0.1.0-rc9"

[tool.poetry.dependencies]
behave = "*"
black = "*"
chardet = "*"
csvw = "*"
docker = "*"
pipenv-setup = "*"
pytest = "*"
python = "^3.9"
python-dateutil = "*"
rdflib = ">=6.0.0"
sphinx = "*"
sphinx-book-theme = "*"
pyparsing = "==2.4.7"
tox = "^3.24.4"
# docker depends on pywin32 - https://github.com/advisories/GHSA-hwfp-hg2m-9vr2
# this is mainly to stop dependabot stop moaning since we don't use win32 for development
pywin32 = { version = ">=301", markers = "sys_platform == 'win32'"}

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
exclude = [
  ".venv",
  "csvcubeddevtools/behaviour",
]
pythonVersion = "3.9"
