[tool.poetry]
name = "csvcubed-models"
version = "0.1.0"
description = "Models and RDF serialisation functionality useful to the csvcubed family of tools."
authors = ["Integrated Data Service - Dissemination <sharedcustomercontactcentre@ons.gov.uk>"]
license = "Apache-2.0"
exclude = ["docs/*"]
packages = [
    { include = "csvcubedmodels"}
]

[tool.poetry.dependencies]
python = "^3.9"
unidecode = "*"
rdflib = "~=5.0.0"

[[tool.poetry.source]]
name = 'test-pypi'
url = 'https://test.pypi.org/simple/'
secondary = true

[tool.poetry.dev-dependencies]
csvcubed-devtools = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion="3.9"
exclude = [
    ".venv",
    "**/tests",
    "**/build"
]