[tool.poetry]
authors = ["Integrated Data Service - Dissemination <sharedcustomercontactcentre@ons.gov.uk>"]
description = "Provides functionality necessary to transform RDF Data Cube style CSV-Ws into a format compatible with the Publish My Data platform. Part of the csvcubed family."
exclude = ["docs/*"]
license = "Apache-2.0"
name = "csvcubed-pmd"
packages = [
  {include = "csvcubedpmd"},
]
version = "0.1.0"

[tool.poetry.dependencies]
csvcubed-models = "*"
csvw = "*"
pandas = "*"
pyparsing = "~=2.4.7"
python = "^3.9"
rdflib = "*"
rdflib-jsonld = "==0.6.1"
requests = "*"
unidecode = "*"
uritemplate = "*"

[tool.poetry.dev-dependencies]
csvcubed-devtools = "*"

[[tool.poetry.source]]
name = 'test-pypi'
secondary = true
url = 'https://test.pypi.org/simple/'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
exclude = [
  ".venv",
  "**/tests/behaviour/steps",
]
pythonVersion = "3.9"

[tool.poetry.scripts]
pmdutils = 'csvcubedpmd.main:main'
