[tool.poetry]
name = "csvqb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "OGLv3"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "~=1.3.3"
sharedmodels = {path = "./../sharedmodels", develop = true}
rdflib-jsonld = "~=0.6.1"
pydantic = {git = "https://github.com/robons/pydantic.git", develop = true}
click = "~=8.0.1"
colorama = "~=0.4.4"
pyparsing = "~=2.4.7" 

[tool.poetry.dev-dependencies]
devtools = {path = "./../devtools", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion="3.9"
exclude = [
    ".venv",
    "devtools/behave"
]