[tool.poetry]
authors = ["Integrated Data Service - Dissemination <example@example.com>"]
description = "Provides functionality necessary to transform RDF Data Cube style CSV-Ws into a format compatible with the Publish My Data platform. Part of the csvwlib family."
exclude = ["docs/*", "pmd/tests/*"]
license = "Apache-2.0"
name = "pmd"
version = "0.1.0"

[tool.poetry.dependencies]
csvw = "*"
pandas = "*"
pyparsing = "~=2.4.7"
python = "^3.9"
rdflib = "*"
rdflib-jsonld = "==0.6.1"
requests = "*"
sharedmodels = {url = "./../sharedmodels"}
unidecode = "*"
uritemplate = "*"

[tool.poetry.dev-dependencies]
sharedmodels = {path = "./../sharedmodels", develop = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
exclude = [
  ".venv",
  "**/tests/behaviour/steps",
]
pythonVersion = "3.9"

[tool.poetry.scripts]
pmdutils = 'pmd.main:main'
