[tool.poetry]
authors = ["Integrated Data Service - Dissemination <example@example.com>"]
description = "Provides functionality necessary to transform RDF Data Cube style CSV-Ws into a format compatible with the Publish My Data platform. Part of the csvwlib family."
exclude = ["docs/*", "pmd/tests/*"]
license = "Apache-2.0"
name = "pmd"
version = "0.1.0"

[tool.poetry.dependencies]
csvw = "*"
pandas = "*"
pyparsing = "~=2.4.7"
python = "^3.9"
rdflib = "*"
rdflib-jsonld = "==0.6.1"
requests = "*"
unidecode = "*"
uritemplate = "*"

[tool.poetry.dev-dependencies]
devtools = {path = "./../devtools", develop = true}
# The sharedmodels library is currently listed as a dev dependency so that we can reference it by its relative
# path and continue to edit code side-by-side
# The sharedmodels dependency is to become a regular dependency when the packages are split out into separate
# repositories in Issue #205
sharedmodels = {path = "./../sharedmodels", develop = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
exclude = [
  ".venv",
  "**/tests/behaviour/steps",
]
pythonVersion = "3.9"

[tool.poetry.scripts]
pmdutils = 'pmd.main:main'
